internal/glance/static/main.css
/* ... */
.popover-container.position-above .popover-frame::before {
    transform: rotate(-135deg);
    top: auto;
    bottom: calc(var(--triangle-size) / 2 * -1 - 1px);
}

.popover-container.position-above .popover-frame {
    --shadow-properties: 0 10px 20px -10px;
}

@keyframes popoverFrameEntrance {
    from {
        opacity: 0;
        transform: translateY(var(--entrance-direction));
    }
}

.summary {
    width: 100%;
    cursor: pointer;
    word-spacing: -0.18em;
    user-select: none;
    list-style: none;
    position: relative;
    display: flex;
    z-index: 1;
}

.details[open] .summary {
    margin-bottom: .8rem;
}

.summary::before {
    content: "";
    position: absolute;
    inset: -.3rem -.8rem;
    border-radius: var(--border-radius);
    background-color: var(--color-widget-background-highlight);
    opacity: 0;
    transition: opacity 0.2s;
    z-index: -1;
}

.details[open] .summary::before, .summary:hover::before {
    opacity: 1;
}

.details:not([open]) .list-with-transition {
    display: none;
}

.summary::after {
    content: "◀" / "";
    font-size: 1.2em;
    position: absolute;
    top: 0;
    bottom: 0;
    line-height: 1.3em;
    right: 0;
    transition: rotate .5s cubic-bezier(0.22, 1, 0.36, 1);
}

details[open] .summary::after {
    rotate: -90deg;
}

.content-bounds {
    max-width: 1600px;
    width: 100%;
    margin-inline: auto;
    padding: 0 var(--content-bounds-padding);
}

.page-width-wide .content-bounds {
    max-width: 1920px;
}

.page-width-slim .content-bounds {
    max-width: 1100px;
}

.page-center-vertically .page {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

/* TODO: refactor, otherwise I hope I never have to change dynamic columns again */
.dynamic-columns {
    --list-half-gap: 0.5rem;
    gap: var(--widget-content-vertical-padding) var(--widget-content-horizontal-padding);
    display: grid;
    grid-template-columns: repeat(var(--columns-per-row), 1fr);
}

.dynamic-columns > * {
    padding-left: var(--widget-content-horizontal-padding);
    border-left: 1px solid var(--color-separator);
    min-width: 0;
}

.dynamic-columns > *:first-child {
    padding-top: 0;
    border-top: none;
    border-left: none;
}

.dynamic-columns:has(> :nth-child(1)) { --columns-per-row: 1; }
.dynamic-columns:has(> :nth-child(2)) { --columns-per-row: 2; }
.dynamic-columns:has(> :nth-child(3)) { --columns-per-row: 3; }
.dynamic-columns:has(> :nth-child(4)) { --columns-per-row: 4; }
.dynamic-columns:has(> :nth-child(5)) { --columns-per-row: 5; }

@container widget (max-width: 599px) {
    .dynamic-columns { gap: 0; }
    .dynamic-columns:has(> :nth-child(1)) { --columns-per-row: 1; }
    .dynamic-columns > * {
        border-left: none;
        padding-left: 0;
    }
    .dynamic-columns > *:not(:first-child) {
        margin-top: calc(var(--list-half-gap) * 2);
    }
    .dynamic-columns.list-with-separator > *:not(:first-child) {
        margin-top: var(--list-half-gap);
        border-top: 1px solid var(--color-separator);
        padding-top: var(--list-half-gap);
    }
}
@container widget (min-width: 600px) and (max-width: 849px) {
    .dynamic-columns:has(> :nth-child(2)) { --columns-per-row: 2; }
    .dynamic-columns > :nth-child(2n-1) {
        border-left: none;
        padding-left: 0;
    }
}
@container widget (min-width: 850px) and (max-width: 1249px) {
    .dynamic-columns:has(> :nth-child(3)) { --columns-per-row: 3; }
    .dynamic-columns > :nth-child(3n+1) {
        border-left: none;
        padding-left: 0;
    }
}
@container widget (min-width: 1250px) and (max-width: 1499px) {
    .dynamic-columns:has(> :nth-child(4)) { --columns-per-row: 4; }
    .dynamic-columns > :nth-child(4n+1) {
        border-left: none;
        padding-left: 0;
    }
}
@container widget (min-width: 1500px) {
    .dynamic-columns:has(> :nth-child(5)) { --columns-per-row: 5; }
    .dynamic-columns > :nth-child(5n+1) {
        border-left: none;
        padding-left: 0;
    }
}

.cards-vertical {
    flex-direction: column;
}

.cards-horizontal {
    --cards-per-row: 6.5;
}

.cards-horizontal, .cards-vertical {
    --cards-gap: calc(var(--widget-content-vertical-padding) * 0.7);
    display: flex;
    gap: var(--cards-gap);
}

.card {
    display: flex;
    flex-direction: column;
}

.cards-horizontal .card {
    flex-shrink: 0;
    width: calc(100% / var(--cards-per-row) - var(--cards-gap) * (var(--cards-per-row) - 1) / var(--cards-per-row));
}

.cards-grid .card {
    min-width: 0;
}

.cards-horizontal {
    overflow-x: auto;
    scrollbar-width: thin;
    padding-bottom: 1rem;
}

.cards-grid {
    --cards-per-row: 6;
    display: grid;
    grid-template-columns: repeat(var(--cards-per-row), 1fr);
    gap: calc(var(--widget-content-vertical-padding) * 0.7);
}

@container widget (max-width: 1300px) { .cards-horizontal { --cards-per-row: 5.5; } }
@container widget (max-width: 1100px) { .cards-horizontal { --cards-per-row: 4.5; } }
@container widget (max-width: 850px) { .cards-horizontal { --cards-per-row: 3.5; } }
@container widget (max-width: 750px) { .cards-horizontal { --cards-per-row: 3.5; } }
@container widget (max-width: 650px) { .cards-horizontal { --cards-per-row: 2.5; } }
@container widget (max-width: 450px) { .cards-horizontal { --cards-per-row: 2.3; } }

@container widget (max-width: 1300px) { .cards-grid { --cards-per-row: 5; } }
@container widget (max-width: 1100px) { .cards-grid { --cards-per-row: 4; } }
@container widget (max-width: 850px) { .cards-grid { --cards-per-row: 3; } }
@container widget (max-width: 750px) { .cards-grid { --cards-per-row: 3; } }
@container widget (max-width: 650px) { .cards-grid { --cards-per-row: 2; } }

.widget-small-content-bounds {
    max-width: 350px;
    margin: 0 auto;
}

.widget-error-header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    position: relative;
    margin-bottom: 1.8rem;
    z-index: 1;
}
/* ... */

